@@ -2,7 +2,6 @@ package de.tum.cit.aet.artemis.iris.service.pyris;
 
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 
 import java.util.List;
@@ -49,7 +48,7 @@ class PyrisStatusUpdateServiceErrorCodeTest {
         // Build a terminal stage list with an ERROR stage carrying errorCode "YOUTUBE_PRIVATE"
         // name, weight, state, message, internal, chatMessage
         var errorStage = new PyrisStageDTO("Ingestion", 1, PyrisStageState.ERROR, "video is private", false, null);
-        var statusUpdate = new PyrisLectureIngestionStatusUpdateDTO(null, List.of(errorStage), 7L, "YOUTUBE_PRIVATE");
+        var statusUpdate = new PyrisLectureIngestionStatusUpdateDTO(null, List.of(errorStage), 7L, "YOUTUBE_PRIVATE", null);
 
         service.handleStatusUpdate(job, statusUpdate);
 
@@ -62,7 +61,7 @@ class PyrisStatusUpdateServiceErrorCodeTest {
         var job = new LectureIngestionWebhookJob("job-token-abc", 1L, 2L, 42L);
 
         var doneStage = new PyrisStageDTO("Ingestion", 1, PyrisStageState.DONE, "success", false, null);
-        var statusUpdate = new PyrisLectureIngestionStatusUpdateDTO(null, List.of(doneStage), 7L, null);
+        var statusUpdate = new PyrisLectureIngestionStatusUpdateDTO(null, List.of(doneStage), 7L, null, null);
 
         service.handleStatusUpdate(job, statusUpdate);
 
@@ -70,36 +69,24 @@ class PyrisStatusUpdateServiceErrorCodeTest {
     }
 
     @Test
-    void slidePageNumbersAreExtractedFromFinalResultJson() {
+    void displayPageNumbersAreReadOnlyFromDedicatedField() {
         var job = new LectureIngestionWebhookJob("job-token-abc", 1L, 2L, 42L);
 
         var doneStage = new PyrisStageDTO("Ingestion", 1, PyrisStageState.DONE, "success", false, null);
-        var statusUpdate = new PyrisLectureIngestionStatusUpdateDTO("{\"slidePageNumbers\":[1,2,-1]}", List.of(doneStage), 7L, null);
+        var statusUpdate = new PyrisLectureIngestionStatusUpdateDTO("{\"displayPageNumbers\":[9,9,9]}", List.of(doneStage), 7L, null, List.of(1, 2, -1));
 
         service.handleStatusUpdate(job, statusUpdate);
 
         verify(callbackApi).handleIngestionComplete(eq(42L), eq("job-token-abc"), eq(true), eq(null), eq(List.of(1, 2, -1)));
-        verify(callbackApi, never()).handleCheckpointData(eq(42L), eq("job-token-abc"), eq("{\"slidePageNumbers\":[1,2,-1]}"));
+        verify(callbackApi).handleCheckpointData(eq(42L), eq("job-token-abc"), eq("{\"displayPageNumbers\":[9,9,9]}"));
     }
 
     @Test
-    void slidePageNumbersAreForwardedWithoutFilteringOrReindexing() {
+    void missingDisplayPageNumbersRemainNullableOnSuccess() {
         var job = new LectureIngestionWebhookJob("job-token-abc", 1L, 2L, 42L);
 
         var doneStage = new PyrisStageDTO("Ingestion", 1, PyrisStageState.DONE, "success", false, null);
-        var statusUpdate = new PyrisLectureIngestionStatusUpdateDTO("{\"slidePageNumbers\":[1,null,0,-2,-1,10]}", List.of(doneStage), 7L, null);
-
-        service.handleStatusUpdate(job, statusUpdate);
-
-        verify(callbackApi).handleIngestionComplete(eq(42L), eq("job-token-abc"), eq(true), eq(null), eq(java.util.Arrays.asList(1, null, 0, -2, -1, 10)));
-    }
-
-    @Test
-    void emptySlidePageNumbersAreForwardedOnSuccessfulTerminalCallback() {
-        var job = new LectureIngestionWebhookJob("job-token-abc", 1L, 2L, 42L);
-
-        var doneStage = new PyrisStageDTO("Ingestion", 1, PyrisStageState.DONE, "success", false, null);
-        var statusUpdate = new PyrisLectureIngestionStatusUpdateDTO("{\"slidePageNumbers\":[]}", List.of(doneStage), 7L, null);
+        var statusUpdate = new PyrisLectureIngestionStatusUpdateDTO("done", List.of(doneStage), 7L, null, null);
 
         service.handleStatusUpdate(job, statusUpdate);
 
